# BINST-protocol

./: Cargo.toml  README.md
crates/binst-btc/: Cargo.toml
crates/binst-btc/src/: lib.rs  mempool.rs  script.rs  tests.rs  txbuilder.rs  types.rs
crates/binst-decoder/src/: vault.rs
crates/binst-evm/: Cargo.toml
crates/binst-evm/src/: abi.rs  lib.rs  rpc.rs  selectors.rs  tests.rs  types.rs
crates/binst-inscription/src/: types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  scanner.rs
crates/cli/src/cmd/: factory.rs  finality.rs  instance.rs  mod.rs  scan.rs  vault.rs
schema/: binst-metaprotocol.json
schema/examples/: process_instance.json  process_template.json
