[package]
name = "citrea-scanner"
version = "0.1.0"
edition = "2024"
description = "BINST sovereign CLI toolkit — inscribe, deploy, execute, scan, finality"

[[bin]]
name = "binst"
path = "src/main.rs"

[dependencies]
binst-btc = { path = "../binst-btc", features = ["std"] }
binst-decoder = { path = "../binst-decoder" }
binst-evm = { path = "../binst-evm", features = ["std"] }
binst-inscription = { path = "../binst-inscription" }
citrea-decoder = { path = "../citrea-decoder" }
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
